# neural-junkie

./: .gitignore  DOCS.md  Makefile  README.md  debug_normalize.go  env.example  go.mod  go.sum  index.html  load-env.sh  test-marked.js  test-mermaid-wide.md  test-mermaid.md
desktop/: MIGRATION_SUMMARY.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: README.md  icon.icns
desktop/src-tauri/src/: main.rs
docs/: AGENT_REVIEW.md  ARCHITECTURE.md  ASSISTANT_AGENT.md  ASSISTANT_COLLAB_REGRESSION_RUNBOOK.md  BIOLOGY_PACK.md  CHANGELOG.md  CLI_AGENTS.md  CNAME  COLLABORATION.md  CONFLUENCE_AGENTS.md  CONTEXT_MODEL.md  DEVELOPMENT_NOTES.md  DISPATCH_INTEGRATION.md  DOWNLOAD.md  FUTURE_ENHANCEMENTS.md  GETTING_STARTED.md  GITHUB_CONFLUENCE_IMPLEMENTATION.md  HELPER_AGENTS.md  MCP_EXPORTS.md  MCP_INTEGRATION.md  MODERATOR_AGENT.md  MODERATOR_QUICK_START.md  REPO_AGENTS.md  RUNBOOK_ACTIONS.md  SOFTWARE_DEVELOPMENT_PACK.md  STATUS.md  USER_VALUE_GUIDE.md  index.html  release-notes.html
examples/: scenario1_performance.md  scenario2_architecture.md  scenario3_code_review.md  scenario4_helper_agents.md
public/: 404.html  index.html  styles.css
scripts/: PERF_UI.md  analyze-last-session.sh  archive-last-session.sh  check-cache.go  collab-smoke.py  collab-smoke.sh  compose-beta-ad.sh  compose-beta12-ads.sh  compose-collaboration-ad.sh  compose-context-scope-ad.sh  compose-nondev-ads.sh  compose-second-opinion-ad.sh  debug-collab.py  debug-collab.sh  demo-repo-agent.sh  demo.sh  dump-hub-memory.sh  generate-update-manifests.sh  mcp-smoke.sh  nj_last_session.py  quick-test.sh  regenerate-app-icons.sh  smoke-release-install.sh  start-clean.sh  start-helper-agent.sh  test-cache-improvement.sh  test-dedup-final.sh  test-mentions.sh  test-message-sending.sh  test-repo-cache.sh  watch-logs.sh  watch-nj-memory.sh
test/: agent_review_test.go  assistant_test.go  cache_test.go  collab_completion_hub_test.go  collab_recap_helpers.go  collab_recap_hub_test.go  collab_smoke_api_test.go  gui_test.go  (+16 more)
(+435 files in other folders)
