[package]
name = "neural-junkie"
version = "0.1.1"
description = "High-octane agent orchestration for developers who hate waiting"
authors = ["Camron Wood"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "shell-sidecar", "process-relaunch", "dialog-open", "window-all", "path-all", "shell-open"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
urlencoding = "2.1"
portable-pty = "0.8"
dirs = "5"
reqwest = { version = "0.12", features = ["blocking"] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

